base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kustomize
    app.kubernetes.io/component: kustomize
    app.kubernetes.io/instance: kustomize
    app.kubernetes.io/name: kustomize-test
    test: kustomize
  name: kustomize
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: kustomize
    test: kustomize
status:
  loadBalancer: {}
